// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/CSelect Custom smoke-test 1`] = `
<button id="id-13"
        class="cmpui_select__root"
        role="combobox"
        aria-expanded="false"
        aria-labelledby="id-14"
        aria-controls="id-15"
        aria-haspopup="listbox"
        style="width: 128px;"
>
  <strong>
    India
  </strong>
  <div class="cmpui_select__keyboard-arrow-down-icon">
  </div>
</button>
`;

exports[`components/CSelect Default smoke-test 1`] = `
<button id="id-1"
        class="cmpui_select__root"
        role="combobox"
        aria-expanded="false"
        aria-labelledby="id-2"
        aria-controls="id-3"
        aria-haspopup="listbox"
>
  <span>
    India
  </span>
  <div class="cmpui_select__keyboard-arrow-down-icon">
  </div>
</button>
`;

exports[`components/CSelect Disabled smoke-test 1`] = `
<button id="id-7"
        class="cmpui_select__root"
        disabled
        role="combobox"
        aria-expanded="false"
        aria-labelledby="id-8"
        aria-controls="id-9"
        aria-haspopup="listbox"
>
  <span>
    India
  </span>
  <div class="cmpui_select__keyboard-arrow-down-icon">
  </div>
  <label id="id-8"
         class="cmpui_select__label"
         for="id-7"
  >
    Label
  </label>
</button>
`;

exports[`components/CSelect Label smoke-test 1`] = `
<button id="id-4"
        class="cmpui_select__root"
        role="combobox"
        aria-expanded="false"
        aria-labelledby="id-5"
        aria-controls="id-6"
        aria-haspopup="listbox"
>
  <span>
    India
  </span>
  <div class="cmpui_select__keyboard-arrow-down-icon">
  </div>
  <label id="id-5"
         class="cmpui_select__label"
         for="id-4"
  >
    Label
  </label>
</button>
`;

exports[`components/CSelect Overflow smoke-test 1`] = `
<button id="id-10"
        class="cmpui_select__root"
        role="combobox"
        aria-expanded="false"
        aria-labelledby="id-11"
        aria-controls="id-12"
        aria-haspopup="listbox"
        style="width: 128px;"
>
  <span>
    IndiaIndiaIndiaIndiaIndiaIndiaIndiaIndiaIndiaIndiaIndiaIndiaIndiaIndiaIndiaIndia
  </span>
  <div class="cmpui_select__keyboard-arrow-down-icon">
  </div>
</button>
`;
